--- a/Supply chain analytics.ipynb
+++ b/Supply chain analytics.ipynb
@@ -1,6 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8962a330",
+   "metadata": {},
+   "source": [
+    "### Project Description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a42987d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The project provides a real-world dataset focusing on supply chain analytics. As the main data analyst for Just In Time, you will help solve \n",
+    "# key shipment and inventory management challenges, analyze supply chain inefficiencies, and create insightful dashboards to inform business \n",
+    "# stakeholders about potential problems and propose structural business improvements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a01e529",
+   "metadata": {},
+   "source": [
+    "### Objective"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b62630cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In this project, my primary focus is on addressing key challenges related to shipment and inventory management within the supply chain. \n",
+    "# To achieve this goal efficiently, the project has been divided into few objectives:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c11157ce",
+   "metadata": {},
+   "source": [
+    "# Data Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "9da3f6b1",
@@ -435,6 +482,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "637d8062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The dataset provides three data tables including order_and_shipment, inventory and fulfillment. After examining the data fields, I noticed that the dataset generally represents the following key information\n",
+    "\n",
+    "# •  Customer: General information about customers including identifiers and addresses\n",
+    "\n",
+    "# •  Order: Information about the order including date of order, product and quantity ordered, order value\n",
+    "\n",
+    "# •  Shipment: Shipping information including shipping date, shipping mode\n",
+    "\n",
+    "# •  Product: Specific information about the ordered item including product name, product category, product department\n",
+    "\n",
+    "# •  Warehouse Inventory: Information on inventory management for each product name including monthly inventory, warehouse location, \n",
+    "#    storage costs, order fulfillment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8baf5d87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4042195",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84cfa1d3",
+   "metadata": {},
+   "source": [
+    "### Handling Missing Value"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "de415ea2",
    "metadata": {},
@@ -528,6 +620,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6c62a7ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All three datasets do not contain any missing values. So, there is no need to handle missing data imputation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2092c407",
+   "metadata": {},
+   "source": [
+    "## Duplicated Data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "ae0d3d47",
    "metadata": {},
@@ -587,6 +697,33 @@
    ],
    "source": [
     "df_fulfillment.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f88150de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Moreover, the absence of any duplicate values in all three datasets is also promising. This indicates that the data is fairly clean and ready for \n",
+    "# analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "180e0475",
+   "metadata": {},
+   "source": [
+    "## Data Wrangling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc62c907",
+   "metadata": {},
+   "source": [
+    "### Leading and Trailing Space"
    ]
   },
   {
@@ -689,6 +826,17 @@
    ],
    "source": [
     "df_fulfillment.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be042311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upon inspecting the data using .info(), it has come to our attention that there are anomalies present in the datasets. Specifically, we \n",
+    "# have discovered that some columns contain leading or trailing spaces, which are not intended to be part of the column names."
    ]
   },
   {
@@ -858,6 +1006,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d38bdb08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Based on above data, there are some rows with - values. Need to replace this - values with 0. In odrer to read this data properly."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "0196d764",
    "metadata": {},
@@ -896,10 +1054,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b073e834",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4481174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Order Datetime & Shipment Datetime\n",
+    "\n",
+    "# Due to the data being separated into multiple columns for year, month, day, and time, resulting in a large number of columns, I have decided \n",
+    "# to combine these columns into a single column that includes all the necessary date and time information. This will help simplify the data and \n",
+    "# make it more manageable for further analysis in Tableau."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "9fd7944c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -989,6 +1171,14 @@
     "# Drop unnecessary columns\n",
     "df_orders.drop(columns=['Order Year', 'Order Month', 'Order Day', 'Order Time',\n",
     "                        'Shipment Year', 'Shipment Month', 'Shipment Day'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "714cd6bb",
+   "metadata": {},
+   "source": [
+    "#### Removing unwanted characters in country name"
    ]
   },
   {
@@ -1098,9 +1288,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "31a1951c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27c8b87a",
+   "metadata": {},
+   "source": [
+    "## Data Manipulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f13272ec",
+   "metadata": {},
+   "source": [
+    "### Order Processing Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62835808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The \"Order Processing Time\" is obtained by subtracting the \"Order Datetime\" from the \"Shipment Datetime\".\n",
+    "\n",
+    "# It measures the time taken for the order to move through various stages, including processing, packing, and delivery preparation, until it \n",
+    "# is ready for shipment.\n",
+    "\n",
+    "# This metric helps us understand how quickly we can fulfill customer orders and deliver products to their destination."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "9ca75de8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1323,6 +1554,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d80df9bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The presence of timestamps in the order of dates provides more accurate and detailed information about the time intervals between events. \n",
+    "# However, when calculating \"Order Processing Time\" using a timestamp, it can result in a negative value of 1 on same-day shipping as \n",
+    "# the order, because the shipping date does not have a timestamp, which is why the default timestamp of 00:00:00 is used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc5cf4b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To address this issue, we implemented a lambda function to set a negative value of 1 to 0, ensuring the calculated duration is not negative \n",
+    "# and meaningful for analysis. This approach allows us to gain valuable insights into the efficiency of the shipping process and delivery time, \n",
+    "# taking into account the time-sensitive nature of the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e4000e7",
+   "metadata": {},
+   "source": [
+    "### Feature Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aff9eda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The feature metrics that planning to create in tableau which helps to further analyze inventory management, Shipement delay and many\n",
+    "# more."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e57c6f89",
+   "metadata": {},
+   "source": [
+    "### Total Inventory Storage Cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20455af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Cost of Inventory is a significant financial metric in supply chain management that calculates the overall cost associated with holding and\n",
+    "#managing inventory.\n",
+    "\n",
+    "# The formula for calculating Total Inventory Cost is: 'Warehouse Inventory' times 'Inventory Cost per Unit'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "729a46c4",
+   "metadata": {},
+   "source": [
+    "#### Storage Cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f8ab765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Storage_Cost = [Inventory Cost Per Unit]*[Warehouse Inventory]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ddbed37",
+   "metadata": {},
+   "source": [
+    "### Shipment Delay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7226a9ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Shipment Delay is a metric that measures the time difference between the expected shipment date and the actual date that the order is delivered to the customer. \n",
+    "# This helps identify and measure the efficiency and reliability of the shipping processes.\n",
+    "\n",
+    "# The calculation of Shipment Delay involves comparing the Shipment Days - Actual (actual date the order is shipped) with \n",
+    "# the Shipment Days - Scheduled (the expected or planned date of shipment)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3ae627d",
+   "metadata": {},
+   "source": [
+    "#### Shipment Delay in Days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acf21b34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Shipment Delay = [Shipment Days - Actual] - ['Shipment Days - Scheduled']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11e046b3",
+   "metadata": {},
+   "source": [
+    "### Profit Margin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8e5b7c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Profit Margin helps to assessing the profitability of the supply chain operations. \n",
+    "# It provides insights into the effectiveness of cost control and pricing strategies, enabling organizations to make adjustments to enhance overall profitability.\n",
+    "\n",
+    "#  Profit Margin : Total Profit / Total Gross Sales *100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62ccbbd4",
+   "metadata": {},
+   "source": [
+    "### Avalaible Inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d6f75d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is metric which indicating how efficiently inventory is managed and whether there may be overstocking or understocking \n",
+    "# issues, allowing for more informed decisions to optimize inventory levels.\n",
+    "\n",
+    "#  Avalaible Inventory = Total Warehouse Inventory - Total Order Quantity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab4f1459",
+   "metadata": {},
+   "source": [
+    "### Under or Overstock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e628c3e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Under or Overstock helps to find which products are Overstock and which are understock. And it helps to the balance of inventory.\n",
+    "\n",
+    "#  Under or Overstock = Avalaible Inventory >0 THEN 'Overstock' ELSE 'Understock'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee30ed17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00948ad5",
+   "metadata": {},
+   "source": [
+    "## Data Exporting & Conclusion"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "id": "a010ddde",
    "metadata": {},
@@ -1421,6 +1852,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f0e31c35",
+   "metadata": {},
+   "source": [
+    "## Exporting Cleaned Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "553d9b2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the cleaned and processed DataFrames to a csv file for further visualization and analysis in tableau."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "8d317db4",
@@ -1434,9 +1883,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5470e2b2",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd443711",
+   "id": "e3bb8bf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Through this analysis, we successfully explored and performed data cleaning on the 'df_orders' and 'df_inventory' DataFrames. \n",
+    "# Important metrics such as 'Profit Margin', 'Avalaible Inventory', 'Storage Cost', and 'Shipment Delay' will be calculated in tableau \n",
+    "# to understand inventory performance and supply chain efficiency for the company.\n",
+    "\n",
+    "# Additionally, we removed some anomalous data points that could impact the analysis results. The cleaned and processed data will be \n",
+    "# exported to a csv file for further analysis and visualization in Tableau."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c77ed4a3",
+   "metadata": {},
+   "source": [
+    "## Closing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "874d12df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As an aspiring data engineer/data analyst, I will consistently look for opportunities to improve my skills and insights.Thank you so much.\n",
+    "\n",
+    "# This analysis was conducted as part of a competition organized by DataCamp, with the aim of demonstrating data analytics expertise and providing \n",
+    "# actionable insights to address real-world business challenges. Throughout this process, I strive to use effective data processing, data cleaning, \n",
+    "# and advanced analytics techniques to generate meaningful conclusions and support decision making."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c611965e",
    "metadata": {},
    "outputs": [],
    "source": []
